Launching a borderless window under macOS does not work #54274

Closed
opened 2018-03-08 18:54:44 +01:00 by Rijnder · 12 comments

System Information
macOS 10.13.3, Intel Iris Graphics 6100

Blender Version

Blender 2.79 (sub 3)
	build date: 2018-03-08
	build time: 02:01:29
	build commit date: 2018-03-07
	build commit time: 21:53
	build hash: 596f33f801f
	build platform: Darwin
	build type: Release```

**Short description of error**
Launching a window in borderless mode should be possible under macOS, but launching blender with the `-W`/`--window-borderless` options achieves nothing. The expected result would be a window without the title bar/"traffic light buttons" decoration, but this window decoration is still shown. I know for a fact that this is possible under cocoa, given that popular opensource projects like [mpv](https:*github.com/mpv-player/mpv) and [iTerm](https:*github.com/gnachman/iTerm2) also achieve borderless windows with a simple setting. Of course it could be that it is intended that `-W` does nothing under macOS, but then this option should be either documented as such or removed from the macOS binary.

**Exact steps for others to reproduce the error**
``` $ blender -W ```
Blender opens the default file, but the window decoration/titlebar is still visible.
**System Information** macOS 10.13.3, Intel Iris Graphics 6100 **Blender Version** ```$ blender --version Blender 2.79 (sub 3) build date: 2018-03-08 build time: 02:01:29 build commit date: 2018-03-07 build commit time: 21:53 build hash: 596f33f801f build platform: Darwin build type: Release``` **Short description of error** Launching a window in borderless mode should be possible under macOS, but launching blender with the `-W`/`--window-borderless` options achieves nothing. The expected result would be a window without the title bar/"traffic light buttons" decoration, but this window decoration is still shown. I know for a fact that this is possible under cocoa, given that popular opensource projects like [mpv](https:*github.com/mpv-player/mpv) and [iTerm](https:*github.com/gnachman/iTerm2) also achieve borderless windows with a simple setting. Of course it could be that it is intended that `-W` does nothing under macOS, but then this option should be either documented as such or removed from the macOS binary. **Exact steps for others to reproduce the error** ``` $ blender -W ``` Blender opens the default file, but the window decoration/titlebar is still visible.
Author

Added subscriber: @rien333

Added subscriber: @rien333
Added subscribers: @MartijnBerger, @jensverwiebe, @brecht, @ArtoKitula
Arto Kitula self-assigned this 2018-03-11 00:03:47 +01:00

This is confirmed, on macOS, fullscreen mode is not enabled on startup even there is -W/--window-borderless option set.
wm_window.c lines around 453. Does @brecht, @jensverwiebe or @MartijnBerger know/remember history of this?

This is confirmed, on macOS, fullscreen mode is not enabled on startup even there is -W/--window-borderless option set. wm_window.c lines around 453. Does @brecht, @jensverwiebe or @MartijnBerger know/remember history of this?

So first the confusing thing is that "borderless" actually means fullscreen. Fullscreen at some point meant making a borderless window that covered the entire screen, and combined with the -p option you could get a smaller borderless window. But macOS now has native fullscreen support which works quite different.

If I remember correctly, it was Ton who insisted on never starting Blender in fullscreen even if you save the startup .blend that way, and so this change was made. Probably what was not intended is disabling the -W command line option along with it, I think if you explicitly ask for it it's fine to make the window fullscreen.

What I suggest to let -W make the window fullscreen on startup. I don't think it's worth trying to support smaller borderless windows, and the command line description could be changed to indicate that this is an option for making the window fullscreen.

So first the confusing thing is that "borderless" actually means fullscreen. Fullscreen at some point meant making a borderless window that covered the entire screen, and combined with the -p option you could get a smaller borderless window. But macOS now has native fullscreen support which works quite different. If I remember correctly, it was Ton who insisted on never starting Blender in fullscreen even if you save the startup .blend that way, and so this change was made. Probably what was not intended is disabling the -W command line option along with it, I think if you explicitly ask for it it's fine to make the window fullscreen. What I suggest to let -W make the window fullscreen on startup. I don't think it's worth trying to support smaller borderless windows, and the command line description could be changed to indicate that this is an option for making the window fullscreen.

I'll do the changes. It would be good to also fix -W option description "borderless" -> "fullscreen". Do we need more opinions here? =)

I'll do the changes. It would be good to also fix -W option description "borderless" -> "fullscreen". Do we need more opinions here? =)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I'm fine with renaming --window-borderless to --window-fullscreen. Maybe @ideasman42 has an opinion on it?

I'm fine with renaming --window-borderless to --window-fullscreen. Maybe @ideasman42 has an opinion on it?

Comments to D3100 are welcome.

Comments to [D3100](https://archive.blender.org/developer/D3100) are welcome.

This issue was referenced by 3eaa408cb3

This issue was referenced by 3eaa408cb320bd4bd77d0518d351f861cce9eabf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

The committed fix is not exactly what I had in mind, I suggested to only change the behavior when the -W option is used (so WIN_OVERRIDE_WINSTATE is set).

Otherwise you can still start Blender in fullscreen by saving it in a .blend file in fullscreen. Which I don't personally mind and other platforms do it too, but it goes against what Ton wanted us to do originally.

Further there is a related #ifndef __APPLE__ later in the function which maybe needs to be changed to match as well, what happens when saving with fullscreen or minimized windows needs to be tested.

The committed fix is not exactly what I had in mind, I suggested to only change the behavior when the -W option is used (so `WIN_OVERRIDE_WINSTATE` is set). Otherwise you can still start Blender in fullscreen by saving it in a .blend file in fullscreen. Which I don't personally mind and other platforms do it too, but it goes against what Ton wanted us to do originally. Further there is a related `#ifndef __APPLE__` later in the function which maybe needs to be changed to match as well, what happens when saving with fullscreen or minimized windows needs to be tested.

Oh now I get it. Slowly. =) Fixing.

Oh now I get it. Slowly. =) Fixing.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#54274
No description provided.