Fix T54274, and rename option --window-borderless to --window-fullscreen